--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>sigma balls</h1>
     <img src="images/mizuhara.png">
-    <h1>h1</h1>
+    <h1 href="https://github.com/wuaht/worte.tk">h1</h1>
     <h2>h2</h2>
     <h3>h3</h3>
     <h4>h4</h4>
