avonryle's css stuff
changes bg to black and text to white

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hiiiiiiii</title>
+    <style>body.worte{background-color:rgba(0,0,0,0.25);color: fff;}</style>
   </head>
   <body>
     <h1>sigma balls</h1>
