--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>hiiiiiiii</title>
     <style>body.worte{background-color:rgba(0,0,0,0.25);color: fff;}</style>
   </head>
-  <body>
+  <body class="worte">
     <h1>sigma balls</h1>
     <img src="images/mizuhara.png">
     <h1 href="https://github.com/wuaht/worte.tk">h1</h1>
