--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body class="worte">
     <h1>sigma balls</h1>
     <img src="images/mizuhara.png">
-    <h1 href="https://github.com/wuaht/worte.tk">h1</h1>
+    <h1>h1</h1>
     <h2>h2</h2>
     <h3>h3</h3>
     <h4>h4</h4>
     <h5>h5</h5>
     <h6>h6</h6>
-    <p>ppppp</p>
+    <a title="github page" href="https://github.com/wuaht/worte.tk"><p>ppppp</p></a>
   </body>
 </html>
