--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hiiiiiiii</title>
-    <style>body.worte{background-color:rgba(0,0,0,0.25);color: fff;}</style>
+    <title>wuaht</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body class="worte">
-    <h1>sigma balls</h1>
-    <img src="images/mizuhara.png">
-    <h1>h1</h1>
-    <h2>h2</h2>
-    <h3>h3</h3>
-    <h4>h4</h4>
-    <h5>h5</h5>
-    <h6>h6</h6>
-    <a title="github page" href="https://github.com/wuaht/worte.tk"><p>ppppp</p></a>
+  <body class="body">
+    <div class="container-3 w-container">
+      <h1 class="heading-3">wuaht</h1>
+      <div class="text-block">the worst osu! player of all time</div>
+    </div>
+    <script
+      src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=630673eeb2b7346448bbcaa3"
+      type="text/javascript"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/webflow.js" type="text/javascript"></script>
   </body>
 </html>
