--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>wuaht</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/2506506c7c.js" crossorigin="anonymous"></script>
   </head>
   <body class="body">
     <div class="container-3 w-container">
       <h1 class="heading-3">wuaht</h1>
       <div class="text-block">the worst osu! player of all time</div>
+      <div class="icons">
+        <a href="https://twitter.com/wwwwaaaaaaassss"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://osu.ppy.sh/users/18173280"><img class="osu-icon" src="images/osu.png"></a>
+        <a href="https://www.twitch.tv/worte__"><i class="fa-brands fa-twitch"></i></a>
+        <span class="hovertext" data-hover="worte#0001">
+          <i class="fa-brands fa-discord"></i>
+        </span>
+      </div>
     </div>
-    <script
-      src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=630673eeb2b7346448bbcaa3"
-      type="text/javascript"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/webflow.js" type="text/javascript"></script>
   </body>
 </html>
