--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <h1 class="heading-3">wuaht</h1>
       <div class="text-block">the worst osu! player of all time</div>
       <div class="icons">
-        <a href="https://twitter.com/wwwwaaaaaaassss"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://osu.ppy.sh/users/18173280"><img class="osu-icon" src="images/osu.png"></a>
-        <a href="https://www.twitch.tv/worte__"><i class="fa-brands fa-twitch"></i></a>
+        <a href="https://twitter.com/wwwwaaaaaaassss" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://osu.ppy.sh/users/18173280" target="_blank"><img class="osu-icon" src="images/osu.png"></a>
+        <a href="https://www.twitch.tv/worte__" target="_blank"><i class="fa-brands fa-twitch"></i></a>
+        <a href="https://anilist.co/user/wht/" target="_blank"><img class="anilist" src="images/anilist.png"></a>
         <span class="hovertext" data-hover="worte#0001">
           <i class="fa-brands fa-discord"></i>
         </span>
