--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="https://osu.ppy.sh/users/18173280" target="_blank"><img class="osu-icon" src="images/osu.png"></a>
         <a href="https://www.twitch.tv/worte__" target="_blank"><i class="fa-brands fa-twitch"></i></a>
         <a href="https://anilist.co/user/wht/" target="_blank"><img class="anilist" src="images/anilist.png"></a>
+        <a href="https://www.gluo.xyz/user/13?id=true"><img class="gluo" src="images/glue.png"></a>
         <span class="hovertext" data-hover="worte#0001">
           <i class="fa-brands fa-discord"></i>
         </span>
