discord username change (again)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="https://www.twitch.tv/worte__" target="_blank"><i class="fa-brands fa-twitch"></i></a>
         <a href="https://anilist.co/user/wht/" target="_blank"><img class="anilist" src="images/anilist.png"></a>
         <a href="https://www.gluo.xyz/user/13?id=true"><img class="gluo" src="images/glue.png"></a>
-        <span class="hovertext" data-hover="bubbletea#0001">
+        <span class="hovertext" data-hover="hatsune miku#0001">
           <i class="fa-brands fa-discord"></i>
         </span>
       </div>
