twitter user change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="heading-3">wuaht</h1>
       <div class="text-block">the worst osu! player of all time</div>
       <div class="icons">
-        <a href="https://twitter.com/wwwwaaaaaaassss" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://twitter.com/wuahtium" target="_blank"><i class="fa-brands fa-twitter"></i></a>
         <a href="https://osu.ppy.sh/users/18173280" target="_blank"><img class="osu-icon" src="images/osu.png"></a>
         <a href="https://www.twitch.tv/worte__" target="_blank"><i class="fa-brands fa-twitch"></i></a>
         <a href="https://anilist.co/user/wht/" target="_blank"><img class="anilist" src="images/anilist.png"></a>
